# cudapeak

./: .clang-format  .gitlab-ci-cuda.yml  .gitlab-ci-rocm.yml  .gitlab-ci.yml  .pre-commit-config.yaml  Benchmark.cu  Benchmark.h  CMakeLists.txt  Makefile  Measurement.cpp  README.md  bmma.cu  common.cpp  common.cu  common.h  compute_sp_ai_kernels.cu  compute_sp_kernels.cu  compute_sp_sincos_fpu_kernels.cu  compute_sp_sincos_kernels.cu  compute_sp_sincos_sfu_kernels.cu  cudapeak.cu  dmem.cu  flops.h  fp16.cu  fp32.cu  fp32_dmem.cu  fp32_int32.cu  fp32_load.cu  fp32_sincos_fpu.cu  fp32_sincos_lu.cu  fp32_sincos_sfu.cu  fp32_smem.cu  int32.cu  launch_stream.cu  mem_global_kernels.cu  mem_shared_kernels.cu  mma.cu  oi_sp_dmem_kernels.cu  oi_sp_smem_kernels.cu  sincos_fpu.h  (+2 more)
.github/workflows/: build-optional.yml  build.yml  linting.yml  test-optional.yml  test.yml
benchmarks/: CMakeLists.txt  dmem.cpp  fp16.cpp  fp32.cpp  fp32_dmem.cpp  fp32_int32.cpp  fp32_sincos.h  fp32_sincos_fpu.cpp  fp32_sincos_lu.cpp  fp32_sincos_sfu.cpp  fp32_smem.cpp  int32.cpp  mma.cpp  stream.cpp  stream.cu
common/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  KernelFactory.cpp  KernelFactory.h  KernelRunner.cpp  KernelRunner.h  Measurement.cpp  Measurement.h  common.h  launch.cu
kernels/: bmma.cu  cosisin.cu  cosisin.h  dmem.cu  fp16.cu  fp16.h  fp32.cu  fp32_common.h  fp32_dmem.cu  fp32_int32.cu  fp32_load.cu  fp32_sincos_fpu.cu  fp32_sincos_lu.cu  fp32_sincos_sfu.cu  fp32_smem.cu  int32.cu  int32_common.h  mma.cu  mma_amd.hiph  mma_m16n16k32_fp32bf8bf8fp32.hiph  mma_m16n16k32_fp32fp8fp8fp32.hiph  mma_m16n8k256_s32b1b1s32.cuh  mma_m16n8k32_f32f6f6f32.cuh  mma_m16n8k32_f32f8f8f32.cuh  mma_m16n8k64_f32f4f4f32.cuh  mma_m8n8k128_s32b1b1s32.cuh  mma_m8n8k32_s32s4s4s32.cuh  mma_m8n8k32_s32s8s8s32.cuh  mma_nvidia.cuh  precision.h  stream.cu
scripts/: format.sh  run-format.sh
