add_library(common OBJECT Benchmark.cpp common.cpp KernelFactory.cpp
                          Measurement.cpp)
target_link_libraries(common PUBLIC cxxopts cudawrappers::cu)
if(BUILD_WITH_PMT)
  target_link_libraries(common pmt)
endif()
if(BUILD_WITH_FMT)
  target_link_libraries(common fmt)
endif()
if(BUILD_WITH_PMT OR BUILD_WITH_FMT)
  find_package(Threads)
  target_link_libraries(common Threads::Threads)
endif()
if(BUILD_WITH_HIP)
  set_source_files_properties(Benchmark.cpp PROPERTIES LANGUAGE HIP)
endif()
